syntax = "proto3";

import "db_cmds.proto";

package pb;

option go_package = "/pb";

/*
 db消息体
 */

// 配置信息
message DbConfig {
    string conf_name  = 1;
    string conf_key = 2;
    string conf_value = 3;
}
message ArrayConfig {
    repeated DbConfig data_list = 1;
}

// 客服聊天记录
message DbChatLog {
    string from_id = 1;
    string to_id = 2;
    string content = 3;
    int64 time_stamp = 4;
    EDbChatType chat_type = 5;
    string session_id = 6;
    int32 game_id = 7;
    bool is_visitor = 8;
}
message ArrayDbChatLog {
    repeated DbChatLog data_list = 1;
}

message DbChatRecord {
    string session_id = 3;
    string service_id = 1;
    string player_id = 2;
    bool is_visitor = 4;
    EDbRecordState state = 5;
    int64 time_stamp = 6;
    int32 game_id = 7;
}
message ArrayChatRecord {
    repeated DbChatRecord data_list = 1;
}

/*
命令消息
*/
message DbCommandMsg {
    EDbCommand cmd_type = 1;           // 命令类型
    int32 cmd_value = 2;               // 通用val
    string cmd_str = 3;              // 通用str

    oneof data {
        ArrayConfig array_config = 1001;
        DbChatLog   chat_log = 1002;
        DbChatRecord chat_record = 1003;
        ArrayChatRecord array_chat_record = 1004;
        ArrayDbChatLog array_chat_log = 1005;
    }
}